add leaders image

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>The Lucknow Baptist Church - Passionately Following Christ Together</title>
     <meta name="description" content="Welcome to The Lucknow Baptist Church. We are a community passionately following Christ together in Lucknow. Join us for worship, community, and service." />
     <meta name="keywords" content="Lucknow Baptist Church, Church in Lucknow, Christian, Worship, Bible Study, Community" />
